# Liquidity-Risk-Early-Warning

./: .gitignore  AGENTS.md  CLEANUP_REPORT.md  CODEX.md  README.md  concat_draft.py  generate_tex.py  pyproject.toml  requirements.txt  run_stage0_verify_input.ps1  run_stage1_make_model_ready_panel.ps1  run_stage2_make_lsi_labels.ps1  run_stage3_descriptive_diagnostics.ps1
.devcontainer/: devcontainer.json
.github/workflows/: onset-baseline.yml  smoke-test.yml
06_agent_workspaces/codex_workspace/: handoff_2026-05-20_final_layout_hotfix.md  handoff_2026-05-20_final_paper_audit.md  handoff_2026-05-20_float_text_interleave.md  handoff_2026-05-20_insert_rgarch_skewness.md  handoff_2026-05-20_latex_literature_layout.md  handoff_20260520_rgarch_dynamic_skew_kurtosis_axis.md  (+19 more)
code/: EXPECTED_CODE_STRUCTURE.md  README_AGENT_GENERATES_CODE_HERE.md
docs/: cleanup_inventory.md  cloud_run_guide.md  codespaces_bounded_checklist.md  data_contract.md  data_transfer_to_cloud.md  figure_inventory.md  final_clean_repo_check.md  full_project_archive_note.md  git_push_checklist.md  local_heavy_run_stop_report.md  project_audit.md  project_structure.md  reproduction_steps.md  resume_validation_report.md  round3_push_and_cloud_validation.md  round4_remote_push_and_actions.md
final_output/: README_OUTPUT.md
outputs/: README_AGENT_OUTPUTS.md
scripts/: audit_event_level_evaluation.py  audit_onset_features.py  build_onset_model_panel.py  cloud_full_run_instructions.py  list_required_data.py  prepare_environment.py  recompute_event_metrics.py  run_bounded_onset_cloud_ready.py
(+316 files in other folders)
